--- a/styles/home.css
+++ b/styles/home.css
@@ -5,14 +5,13 @@
 .section_wrap {
     background-color: var(--bgYellow);
     width: 100vw;
-    height: 1000px;
+    height: 70rem;
     margin: auto 0;
     /* overflow-x: hidden; */
     overflow: hidden;
  }
 
 /* Hero Section */
-
 .home_wrap {
     margin: auto;
     display: table;
@@ -35,25 +34,29 @@
         opacity: 1;
         transform: translateX(0px) rotate(0deg);
     }
-      
+
 }
 
 .home_wrap_text h1 {
     font-size: 3.22rem;
 }
 
+.pink_text {
+    color: var(--pink);
+    font-weight: 900;
+}
+
 .home_wrap_text h4 {
     font-size: 1.5rem;
+}
+
+.blue_text {
+    color: var(--lightBlue);
 }
 
 .home_wrap_text p {
     margin-bottom: 1.25rem;
     color: var(--btnFontColor);
-}
-
-.pink_text {
-    color: var(--pink);
-    font-weight: 900;
 }
 
 .home_hi img {
@@ -74,15 +77,18 @@
 /* ATC button */
 .home_button {
     background-color: var(--bgPink);
-    padding: 9px 18px;
-    border-radius: 33px;
+    padding: 0.5625rem 1.125rem;
+    margin-right: 1rem;
+    border-radius: 2.0625rem;
 }
 
 .home_button:hover {
     background-color: var(--pink);
-    color: #fff;
-    transition: 0.3s;
-    /* border: 2px solid var(--blue); */
+    color: var(--btnFontColor);
+    transition: 0.26s;
+    border: 2px solid var(--btnFontColor);
+    background-color: var(--yellow);
+    box-shadow: #7497c1 0.375rem 0.375rem 0.0625rem;  
 }
 
 .home_button:hover:after {
@@ -91,7 +97,7 @@
 
 /* Work */
 .homepage_work {
-    margin: 5rem 0;
+    margin: 4rem 0;
 }
 
 .homepage_work_wrap {
@@ -100,9 +106,8 @@
 }
 
 .home_work_h2 {
-    padding: 4.0625rem;
+    padding: 3rem;
 }
-
 
 .image_bg img {
     width: 350px;
@@ -110,6 +115,15 @@
     object-fit: cover;
     border-radius: 33px;
     overflow: hidden;
+}
+
+.image_bg_hover {
+    opacity: 1;
+}
+
+.image_bg_hover:hover {
+    opacity: 0.6;
+    /* background-color: var(--lightBlue); */
 }
 
 .home_content {
@@ -166,14 +180,16 @@
   }
 
 
-
-
-
 /* =======================================
                 Media Query 
    =======================================*/
 
 @media only screen and (min-width: 863px) {
+
+    /* Section */
+    .section_wrap {
+        height: 62.5rem;
+     }
 
     /* Hero section */
     .home_wrap {
